# ibex-db-lambda

./: .env.example  .env.optimized  .gitignore  Dockerfile  NESTED_DATA_SUMMARY.md  README.md  UPDATE_FIX_SUMMARY.md  benchmark_performance.py  buildspec.yml  buildspec.yml.bak  deploy_optimizations.sh  fastapi_app.py  ibex-db-lambda.code-workspace  performance_optimizations_implemented.md  pyproject.toml  test_local.sh
.claude/: settings.local.json
config/: api_keys.json  config.json
docker/: Dockerfile  Dockerfile.fastapi  docker-compose.yml
docs/: AUDITING_TIME_TRAVEL.md  AUTHENTICATION_GUIDE.md  COGNITO_COST_ANALYSIS.md  COMPACTION.md  COMPLEX_TYPES_GUIDE.md  COMPLEX_TYPES_IMPLEMENTATION.md  COMPLEX_TYPES_QUICK_REFERENCE.md  CONFIG.md  COST_ESTIMATION.md  CUSTOM_DOMAIN_SETUP.md  DOCUMENTATION.md  FIX_CUSTOM_DOMAIN.md  HOW_UPDATES_WORK.md  LOCAL_TESTING.md  NESTED_DATA_QUICK_REF.md  PERFORMANCE_GUIDE.md  PRODUCTION_SETUP.md  QUERYING_NESTED_DATA.md  QUICKSTART.md  README_SETUP.md  SIMPLE_AUTH_GUIDE.md  UPDATE_BUG_FIX.md  UPDATE_FLOW_VISUAL.md  WHATS_NEW_COMPLEX_TYPES.md
lambda_test_events/: 01_health_check.json  02_create_table.json  03_write_users.json  04_query_all_users.json  05_query_filter_by_name.json  06_update_user.json  07_delete_user.json  08_list_tables.json  09_describe_table.json  10_compact_table.json  11_create_table_with_array.json  12_write_products_with_array.json  13_create_table_with_struct.json  14_write_users_with_struct.json  15_create_table_complex.json  16_write_complex_order.json  17_test_update_fix.json  18_query_nested_struct.json  (+4 more)
(+56 files in other folders)
