[project]
name = "s3-acid-database"
version = "0.1.0"
description = "Serverless ACID database using S3, Iceberg, and DuckDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pyiceberg[s3fs,pyarrow]>=0.7.1",
    "polars>=0.20.31",
    "duckdb>=1.0.0",
    "boto3>=1.34.69",
    "fsspec>=2024.6.1",
    "s3fs>=2024.6.1",
    "pyarrow>=16.1.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "markdown>=3.5.0",
    "pygments>=2.17.0",
    "jinja2>=3.1.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "python-dotenv>=1.0.1",
    "black>=24.4.2",
    "ruff>=0.4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "python-dotenv>=1.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]